fixing hamburger button on mobile

--- a/projects/guestHouse/sass/style.scss
+++ b/projects/guestHouse/sass/style.scss
@@ -665,6 +665,10 @@ header {
 }
 
 @media only screen and (max-width: 600px) {
+    body {
+        width: 100%;
+        background-image: none;
+    }
     header {
         position: relative;
         .hero {
